--- a/Announcement.html
+++ b/Announcement.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-    	<link rel="icon" type="image/png" href="image/favicon.ico">
+    	<link rel="icon" type="image/png" href="https://lh5.ggpht.com/-QFxODWPJiTE/WBh68IKNlxI/AAAAAAAACKg/VDTbhS4iNQEq_ERJTMGzk-VC3uNfj3FHwCLcB/s200/heart-icon.png">
         <meta charset="utf-8">
         <meta http-equiv="Cache-Control" content="no-cache">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
